--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="holder">
+	        	<div class="box box1">3</div>
+				<div class="box box2">1</div>
+				<div class="box box3">2</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
